--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "testEnvironment": "jsdom",
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
   "transform": {
     "^.+\\.(js|jsx)$": "babel-jest"
   },
@@ -13,5 +14,26 @@
   ],
   "moduleNameMapper": {
     "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+  },
+  "collectCoverage": true,
+  "collectCoverageFrom": [
+    "src/**/*.{js,jsx}",
+    "!src/main.jsx",
+    "!src/setupTests.js",
+    "!src/**/*.test.{js,jsx}"
+  ],
+  "coverageDirectory": "coverage",
+  "coverageReporters": [
+    "text",
+    "lcov",
+    "html"
+  ],
+  "coverageThreshold": {
+    "global": {
+      "branches": 70,
+      "functions": 70,
+      "lines": 70,
+      "statements": 70
+    }
   }
 }
