--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,8 @@
 {
   "testEnvironment": "jsdom",
-  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
+  "setupFilesAfterEnv": [
+    "<rootDir>/src/setupTests.js"
+  ],
   "transform": {
     "^.+\\.(js|jsx)$": "babel-jest"
   },
