--- a/package.json
+++ b/package.json
@@ -30,17 +30,20 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.29.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
-    "babel-jest": "^30.0.2",
+    "babel-jest": "^29.0.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.3",
+    "jest": "^29.0.0",
     "jest-environment-jsdom": "^30.0.2",
     "netlify-cli": "^22.2.1",
     "vite": "^7.0.0"
